tests/errors/tc_expr_call_nonfunc.lx
@module "main"

pub const main -> fn () int {
    let x: int = 5;
    x();
    return 0;
}
